added optional bulletization for point contact
git-svn-id: https://radware.phy.ornl.gov/MJ/mjd_siggen@36 2af9a140-1847-0410-a10b-a667a45f5929

--- a/config_files/p1_new.config
+++ b/config_files/p1_new.config
@@ -14,6 +14,7 @@ pc_length    2.1         # point contact length
 pc_radius    1.4         # point contact radius
 #pc_length    2.0         # point contact length
 #pc_radius    1.5         # point contact radius
+bulletize_PC    0        # set to 1 for point contact hemispherical, 0 for cylindrical
 taper_length 4.5         # size of 45-degree taper at bottom of ORTEC-type crystal
 		  	 #    (equal for z and r, set to zero for BEGes)
 wrap_around_radius 0     # wrap-around radius for BEGes. Set to zero for ORTEC
